# bitunlocker

./: .gitignore  AGENTS.md  Cargo.toml  README.md
doc/: index.md
src/: cache.rs  case.rs  generator.rs  leet.rs  lib.rs  main.rs  months.rs  numbers.rs  passwords.rs  template.rs  unlock.rs  words.rs
test/e2e/: cache-test.spec.js  package-lock.json  package.json  word-gen-test.spec.js
